[package]
name = "eOs"
version = "0.1.0"
authors = ["xiyu714 <35284881+xiyu714@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"
spin = "0.4.9"
volatile = "0.2.3"
x86_64 = "0.7.5"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
# bootimage就会将成功退出码映射到退出码0；这样一来，cargo xtest就能正确地识别出测试成功的情况，而不会将其视为测试失败。
# 但我不知道，bootimage是怎么做到的